[tool.poetry]
name = "rsa_implementaatio"
version = "0.1.0"
description = ""
authors = ["Doubleneck <antti.vuorenmaa@kolumbus.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.5"
mpmath = "^1.2.1"
sympy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
